Mais novas paginas

--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@
                     </div> </a>
                 </div>
                 <div class="estil-img item11">
-                    <a href="#"> <img src="../1year/img/Alianca.jpeg" alt="">
+                    <a href="alianca.html"> <img src="../1year/img/Alianca.jpeg" alt="">
                     <div class="conteudo">
                         <p>O Dia da Aliança</p>
                         <p class="subtitle"> 14 de Abril de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item12">
-                    <a href="#"> <img src="../1year/img/Outback.jpeg" alt="">
+                    <a href="rioPreto.html"> <img src="../1year/img/Outback.jpeg" alt="">
                     <div class="conteudo">
                         <p>Indo pra Rio Preto</p>
                         <p class="subtitle"> Não lembro a data K </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item13">
-                    <a href="#"> <img src="../1year/img/DiaNamorados.jpeg" alt="">
+                    <a href="diaNamorados.html"> <img src="../1year/img/DiaNamorados.jpeg" alt="">
                     <div class="conteudo">
                         <p>Dia dos Namorados S2</p>
                         <p class="subtitle"> 12 de Junho de 2023 </p>
