--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@
                     </div> </a>
                 </div>
                 <div class="estil-img item14">
-                    <a href="#"> <img src="../1year/img/Standup.jpeg" alt="">
+                    <a href="standUp.html"> <img src="../1year/img/Standup.jpeg" alt="">
                     <div class="conteudo">
                         <p>Standup do Vitor Sarro</p>
                         <p class="subtitle"> 20 de Junho de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item15">
-                    <a href="#"> <img src="../1year/img/Fefol.jpeg" alt="">
+                    <a href="fefol.html"> <img src="../1year/img/Fefol.jpeg" alt="">
                     <div class="conteudo">
                         <p>Folclore Juntinhos</p>
                         <p class="subtitle"> 11 de Agosto de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item16">
-                    <a href="#"> <img src="../1year/img/Estadio2.jpeg" alt="">
+                    <a href="segundaViagem.html"> <img src="../1year/img/Estadio2.jpeg" alt="">
                     <div class="conteudo">
                         <p>Segunda Viagem!</p>
                         <p class="subtitle"> 11 de Setembro de 2023 </p>
