Correção escrita pag hamburguer

--- a/noiteHamburguer.html
+++ b/noiteHamburguer.html
@@ -33,7 +33,7 @@
             <p>
                 Foi nesse dia que falei de você pra minha mãe, e de alguma forma, ela já sabia que eu estava com você kkkkkkk, até falou pra 
                 você ir fazer o bacon pra eu não fazer cagada. <br><br> Nesse dia você mandou uma foto nossa pra minha mãe, pela primeira vez, e quando eles chegaram e foram te falar oi
-                você ficou toda envergonhada kkkkkkkk. Mal imagina que você hoje estaria batendo na bunda da minha mãe e chamando ela de 'Bundão' KKKKKKKK,
+                você ficou toda envergonhada kkkkkkkk. Mal imaginava que você hoje estaria batendo na bunda da minha mãe e chamando ela de 'Bundão' KKKKKKKK,
                 desculpa por isso, mas lembrar dessas coisas e tudo o que passamos para estarmos juntos hoje, me deixa muito feliz!
                 <br><br> Meus pais amaram voce, minha vó também, todo mundo te amou, todo mundo falando que você era linda, bando de puxa saco!!
                 Não posso fazer nada se você realmente é a menina mais linda desse mundo né. <br><br> Sem contar 
