Colocando paragrafos nas paginas já feitas

--- a/alianca.html
+++ b/alianca.html
@@ -31,7 +31,11 @@
         </div>
         <div class="endpage">
             <p>
-
+                Que ansiedade que eu tava pra te entregar isso, só nao tava mais nervoso do que no dia que te pedi em namoro (não temos nenhuma foto naquele dia, triste)
+                <br><br> Ainda lembro que você tinha descoberto que eu tinha comprado a aliança, mas por intervenção Divina você literalmente esqueceu totalmente que tinha visto,
+                ainda acredito que você apenas falou isso pra me deixar menos mal, pq eu fiquei chateado que você descobriu, mas enfim.
+                <br><br>Deu tudo certo, usamos a aliança por quase um ano, até a sua ficar azul e a outra dourada kkkkkkkk.
+                <br><br> Estou escrevendo isso depois do dia que te dei a nova, só pra falar que essa vai durar bastante, mas bastante mesmo, só vamos trocar pra noivar, tabom???
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
