--- a/conhecendoSuaFam.html
+++ b/conhecendoSuaFam.html
@@ -26,7 +26,11 @@
         </div>
         <div class="endpage">
             <p>
-
+                Que dia legal, o primeiro domingo que você foi em casa e depois eu fui pra sua também!
+                <br><br> Foi o dia que conheci suas irmãs, sua mãe, seu cunhado, e foram todos muito legais comigo! Inclusive foi o dia que você subiu na minha vó comigo, 
+                e ela se apaixonou quando te viu (novidade kkkkk).
+                <br><br> Quando você falou que eu iria conhecer seu pai e que ele era super bravo, só Deus sabe o medo que eu fiquei
+                kkkkkkkkkkk, mas ele foi super deboa, até seus tios foram.
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
