--- a/diaNamorados.html
+++ b/diaNamorados.html
@@ -36,7 +36,10 @@
         </div>
         <div class="endpage">
             <p>
-
+                Nosso primeiro de muitos Dia dos Namorados juntos! Muito foda, né?
+                <br><br> Fomos comer comida japonesa, que antes de namorarmos eu nunca imaginaria que ia gostar tanto na vida (culpa sua)!
+                Estava tudo muito bom, você estava toda linda, e eu todo bobo apaixonado em você, pena que você passou mal depois de comer muito kkkkkk
+                complicado viu! Mas faz parte, o importante é que foi uma data muito especial e você me deu aquele tênis branco maravilhoso! 
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
