--- a/fefol.html
+++ b/fefol.html
@@ -36,7 +36,10 @@
         </div>
         <div class="endpage">
             <p>
-
+                Primeiro folclore que passamos como namorados!!
+                <br><br> Essas fotos na roda gigante eu sei que estão bem zoadas, aquela mulher doida
+                quis tirar fotos nossas, mas de qualquer forma, foram legais kkkkkkkk. Como esquecer os DIAS que você DESMAIOU naquele brinquedo,
+                 e a teimosa cismava em ir, por mais que parecia aqueles videos do povo desmaiando, foi dificil pra mim sabe, mas foi bom, de qualquer forma!
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
