--- a/ficandoAtolados.html
+++ b/ficandoAtolados.html
@@ -26,7 +26,9 @@
         </div>
         <div class="endpage">
             <p>
-
+                O dia que ficamos atolados na estrada kkkkkkkk! Que desespero legal, eu e quase todo mundo escorregando,
+                A luta pra tirar o carro atolado, do nada seu pai chega e ajuda, foi tudo muito incrivel
+                <br><br> Lembro de ter dado muitas risadas e sempre percebo o quão é bom ter você por perto, como eu amo seu jeito e você por inteira!
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
