--- a/primeiraViagem.html
+++ b/primeiraViagem.html
@@ -41,7 +41,15 @@
         </div>
         <div class="endpage">
             <p>
-
+                A primeira vez que viajamos juntos!!! Um dos momento mais marcantes
+                da nossa história e da minha vida, com certeza!
+                <br><br> Cada momento que tivemos lá, as ondas que você nao queria mergulhar,
+                o medo de entrar na água, seu coro cabeludo queimado kkkkkkkkkkk, muito bom!!
+                <br><br> Quando chegava o fim de tarde e estavamos juntos, numa praia em Guarujá, eu poderia jurar
+                que aquilo era um sonho, e um dos bons. Adorei ter ido lá e principalmente com você,
+                ter ido para vários lugares ao seu lado, saber que eu dormiria num dia e acordaria no outro tendo você e podendo apenas curtir e ser feliz contigo, não tem nada melhor nesse mundo!
+                <br><br> Quantas memórias boas... Com toda certeza desse mundo eu nunca vou esquecer desses dias e serei sempre grato por ter você do meu lado pro resto da minha vida!
+                <br><br> Cada parte dessa viagem foi incrivel, e você tornou ela mais especial ainda, minha linda!
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
