--- a/primeiroAniv.html
+++ b/primeiroAniv.html
@@ -36,7 +36,10 @@
         </div>
         <div class="endpage">
             <p>
-
+                Primeiro aniversário que fomos da família juntos, o do Dorival. Esse ano fomos de novo e foi super legal
+                lembrar que fez 1 ano que tinhamos ido na mesma festa, no mesmo lugar!
+                <br><br> A primeira vez você ainda era timida, mas levou super bem, ficamos sentado com a familia praticamente o tempo todo!
+                <br><br> Sem contar que foi a primeira foto que postamos juntos (que sorriso lindo você tem, puta merda!!!!!!)
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
