--- a/rioPreto.html
+++ b/rioPreto.html
@@ -31,7 +31,8 @@
         </div>
         <div class="endpage">
             <p>
-
+                Esse dia não teve nenhum evento grande, mas achei legal colocar por causa dessa foto kkkkkkkkkkk, amei ela, foi a primeira nossa que postei no feed, pra tentar te surpreender!
+                <br><br>De qualquer forma, foi muito legal, comemos no OutBack e aproveitamos bastante!!!
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
