--- a/standUp.html
+++ b/standUp.html
@@ -26,7 +26,9 @@
         </div>
         <div class="endpage">
             <p>
-
+                Coloquei aqui pra relembrar esse dia, nos divertimos muito e cada vez que você dava risada, eu ficava tão feliz! Te ver sorrindo me faz um bem
+                que você nao tem ideia. Vou fazer sempre o possível e o impossível pra conseguir te fazer rir e melhorar seu dia sempre que você precisar!
+                <br><br> OBS: Essa foto foi tirada no Pizza do Chefe, mas foi no mesmo dia, só pra deixar claro kkkkkkkkk
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
