--- a/segundaViagem.html
+++ b/segundaViagem.html
@@ -71,6 +71,14 @@
         </div>
         <div class="endpage">
             <p>
+                Nossa segunda viagem, o que falar desses dias, hein? Desde o momento que chegamos lá, são várias lembranças, (<s> muito boas hehe </s>) 
+                que ficaram guardadas comigo pro resto da minha vida!
+                <br><br> Primeiro em Ribeirão, ficamos aonde era a empresa do seu pai, fomos no shopping, tivemos que tomar banho gelado kkkkkkkk,
+                e no outro dia ja fomos para Poços de Caldas. Foram dias incrievis, nadamos muito, ficamos juntos, comemos muito, sem nenhuma preocupação,
+                inclusive, foi quando você fez sua entrevista de emprego, e eu tava la doido pra saber como tinha sido, Graças a Deus deu tudo certo!
+                <br><br> Ainda depois de lá, fomos para São Paulo, pro Allianz Parque, quem diria que você, "Corinthiana (por enqunato)" iria comigo num jogo do Palmeiras!
+                Por mais que tenha sido um jogo chato, foi muito legal a experiencia e poder compartilhar aquilo com você tornou ainda melhor.
+                <br><br> Tenho saudade dessas viagens e tenho certeza que ainda faremos muito durante nossas vidas, juntos, e futuramente, seremos nós com nossos filhos.
 
             </p>    
             <div class="container-heart">
