--- a/conhecendoSuaFam.html
+++ b/conhecendoSuaFam.html
@@ -30,7 +30,7 @@
                 <br><br> Foi o dia que conheci suas irmãs, sua mãe, seu cunhado, e foram todos muito legais comigo! Inclusive foi o dia que você subiu na minha vó comigo, 
                 e ela se apaixonou quando te viu (novidade kkkkk).
                 <br><br> Quando você falou que eu iria conhecer seu pai e que ele era super bravo, só Deus sabe o medo que eu fiquei
-                kkkkkkkkkkk, mas ele foi super deboa, até seus tios foram.
+                kkkkkkkkkkk, mas ele foi super deboa, uns dias depois tava até enfiando o dedo na minha bunda kkkkkk, até seus tios foram.
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
