Terminando quase tudo

--- a/index.html
+++ b/index.html
@@ -148,28 +148,28 @@
                     </div> </a>
                 </div>
                 <div class="estil-img item17">
-                    <a href="#"> <img src="../1year/img/8mes.jpeg" alt="">
+                    <a href="oitavoMes.html"> <img src="../1year/img/8mes.jpeg" alt="">
                     <div class="conteudo">
                         <p>Oitavo Mês Juntos</p>
                         <p class="subtitle"> 10 de Outubro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item18">
-                    <a href="#"> <img src="../1year/img/novaImg3.jpeg" alt="">
+                    <a href="diaDaChuva.html"> <img src="../1year/img/novaImg3.jpeg" alt="">
                     <div class="conteudo">
                         <p>Caiu o Mundo</p>
                         <p class="subtitle"> 12 de Outubro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item19">
-                    <a href="#"> <img src="../1year/img/novaImg1.jpeg" alt="">
+                    <a href="formatura.html"> <img src="../1year/img/novaImg1.jpeg" alt="">
                     <div class="conteudo">
                         <p>Formatura</p>
                         <p class="subtitle"> 9 de Dezembro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item20">
-                    <a href="#"> <img src="../1year/img/AnoNovo.jpeg" alt="">
+                    <a href="primeiroAnoNovo.html"> <img src="../1year/img/AnoNovo.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Ano Novo</p>
                         <p class="subtitle"> 31 de Dezembro de 2023 </p>
