--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div> </a>
                 </div>
                 <div class="estil-img item22">
-                    <a href="#"> <img src="../1year/img/Tarzan.jpeg" alt="">
+                    <a href="bonus.html"> <img src="../1year/img/Tarzan.jpeg" alt="">
                     <div class="conteudo">
                         <p>Bônus</p>
                         <p class="subtitle"> Algumas fotos e momentos que simplesmente amo </p>
