Finalizando o site pro meu bem mais precioso

--- a/bonus.html
+++ b/bonus.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="top-image">
-            <h1> Mais Algumas Fotos" </h1>
+            <h1> Mais Algumas Fotos </h1>
         </div>
         <div class="img-box">
             <div class="imagens">
@@ -86,7 +86,11 @@
         </div>
         <div class="endpage">
             <p>
-                
+                Essas são algumas fotos que coloquei aqui por gostar muito delas, as que você está dormindo, seu sorriso espontâneo, eu sou muito apaixonado em você, garota!
+                <br><br> Existem diversas outras fotos, mas se eu colocasse todas aqui a página ia ficar enorme, mas saiba que eu te acho a menina mais linda,
+                mais alegre, mais meiga, (mais sonolenta kkkk) mais perfeita desse mundo inteirinho.
+                <br><br> Incrível que até quando você esta concentrada lendo ou trabalhando, você consegue ser gata, puta merda. Você é perfeita, neném!!!!
+                <br><br> <b> Eu te amo ! </b> 
             </p>
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
