--- a/formatura.html
+++ b/formatura.html
@@ -53,7 +53,7 @@
             <p>
                 Um dia muito especial pra mim, não sei como fiquei acordado até as 5 da manhã e muito menos nao sei como você conseguiu, milagres existem!!!
                 Pensando no quanto eu dancei nesse dia, não sei como isso aconteceu, mas eu gostei, dançamos juntos, minhas pernas estavam pedindo arrego.
-                <br><br> Foi um momento especial, e ainda com a pessoa que eu mais queria que estivesse lá, você!
+                <br><br> Foi um momento especial, e ainda com a pessoa que eu mais queria que estivesse lá, <b>você! </b>
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
