--- a/noiteHamburguer.html
+++ b/noiteHamburguer.html
@@ -37,7 +37,7 @@
                 desculpa por isso, mas lembrar dessas coisas e tudo o que passamos para estarmos juntos hoje, me deixa muito feliz!
                 <br><br> Meus pais amaram voce, minha vó também, todo mundo te amou, todo mundo falando que você era linda, bando de puxa saco!!
                 Não posso fazer nada se você realmente é a menina mais linda desse mundo né. <br><br> Sem contar 
-                que esse dia foi o primeiro rolê entre amigos que estavamos juntos "oficialmente"!
+                que esse dia foi o primeiro rolê entre amigos que estavamos <b>juntos "oficialmente"! </b>
             </p>    
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
