--- a/primeiroAnoNovo.html
+++ b/primeiroAnoNovo.html
@@ -36,7 +36,9 @@
         </div>
         <div class="endpage">
             <p>
-                
+                Primeira virada de ano que passamos juntos, foi incrivel, a sensação de estar virando o ano, escutando e vendo os fogos, lembrando de tudo o que vivemos juntos até aquele momento foi uma das melhores coisas que já senti.
+                <br><br> Tenho mais do que a certeza de que quero passar todos os natais, anos novos, e tudo o que tiver, independente do que seja, do seu lado, para todo o sempre!
+
             </p>
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
