--- a/primeirobeijo.html
+++ b/primeirobeijo.html
@@ -26,12 +26,13 @@
         </div>
         <div class="endpage">
             <p>
+                Onde finalmente aconteceu!!!!
                 Não temos nenhuma foto desses belos dias, infelizmente, mas eu não podia deixa de fora de jeito algum!
                 <br> <br>As primeiras vezes que nos beijamos! Tudo começou com você perguntando se eu queria te beijar (danada), na hora eu falei que sim,
                 como eu iria perder uma oportunidade dessas??? Mas no fundo eu achava que era só uma brincadeira, até que veio suas amigas perguntando se eu queria mesmo te beijar kkkkkk
                 <br> <br>Que momento maravilhoso, tava nervoso, você tinha sumido, mas acabou que deu certo. O melhor beijo da minha vida, já tinha te falado isso, por mais que você ficasse conversando toda hora kkkkkk.
                 Ficamos também nos outros dias, eu achava maravilhoso!!!!
-                <br><br> Essa foto foi do ultimo dia dos shows, quando nós dormimos abraçados pela primeira vez, não é por nada nao, mas o destino sabia de algo!
+                <br><br> Essa foto foi do ultimo dia dos shows, quando nós dormimos abraçados pela primeira vez, não é por nada nao, mas <b>o destino sabia de algo ! </b>
                 <br><br> Cada beijo que eu te dei foi único!
             </p>
             <div class="container-heart">
