--- a/primeirorole.html
+++ b/primeirorole.html
@@ -33,8 +33,8 @@
         </div>
         <div class="endpage">
             <p>
-                Esse rolê a gente mal conversava, foi um dos mais aleatórios que ja fui kkkkkkkk, mas desde esse momento conheci seu jeitinho meigo de ser,
-                mal me conhecia e já quis tirar foto comigo, me senti uma celebridade ali.
+                Esse rolê a gente mal conversava, foi um dos mais aleatórios que ja fui, e você estava lá kkkkkkkk, mas desde esse momento conheci seu jeitinho meigo de ser,
+                mal me conhecia e já quis tirar foto comigo, me senti uma celebridade ali!
             </p>
             <div class="container-heart">
                 <i class="fa fa-heart"></i>
