--- a/segundaViagem.html
+++ b/segundaViagem.html
@@ -74,10 +74,10 @@
                 Nossa segunda viagem, o que falar desses dias, hein? Desde o momento que chegamos lá, são várias lembranças, (<s> muito boas hehe </s>) 
                 que ficaram guardadas comigo pro resto da minha vida!
                 <br><br> Primeiro em Ribeirão, ficamos aonde era a empresa do seu pai, fomos no shopping, tivemos que tomar banho gelado kkkkkkkk,
-                e no outro dia ja fomos para Poços de Caldas. Foram dias incrievis, nadamos muito, ficamos juntos, comemos muito, sem nenhuma preocupação,
+                e no outro dia ja fomos para Poços de Caldas. Foram dias incriveis, nadamos muito, ficamos juntos, comemos muito, sem nenhuma preocupação,
                 você até teve que cuidar de mim quando eu dei uma bicuda numa pedra e lasquei meu dedo todo kkkkkkk, como não te amar??? inclusive, foi quando você fez sua entrevista de emprego, e eu tava la doido pra saber como tinha sido, Graças a Deus deu tudo certo!
                 <br><br> Ainda depois de lá, fomos para São Paulo, pro Allianz Parque, quem diria que você, "Corinthiana (por enqunato)" iria comigo num jogo do Palmeiras!
-                Por mais que tenha sido um jogo chato, foi muito legal a experiencia e poder compartilhar aquilo com você tornou ainda melhor.
+                Por mais que tenha sido um jogo chato, foi muito legal a experiencia e poder compartilhar aquilo com você tornou ainda melhor. (Só lembro do seu sogro puxando o cabelo da sua sogra kkkkk)
                 <br><br> Tenho saudade dessas viagens e tenho certeza que ainda faremos muito durante nossas vidas, juntos, e futuramente, seremos nós com nossos filhos.
 
             </p>    
