--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                     </div> </a>
                 </div>
                 <div class="estil-img item21">
-                    <a href="#"> <img src="../1year/img/novaImg4.jpeg" alt="">
+                    <a href="hojeEmDia.html"> <img src="../1year/img/novaImg4.jpeg" alt="">
                     <div class="conteudo">
-                        <p>Role Mais Recente</p>
-                        <p class="subtitle"> 20 de Janeiro de 2024 </p>
+                        <p>Hoje em Dia</p>
+                        <p class="subtitle"> 2024 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item22">
