--- a/primeiraViagem.html
+++ b/primeiraViagem.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../1year/css/style.css">
     <link rel="stylesheet" href="../1year/css/itens_out.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="icon" href="./icon/icone_coracao.ico">
 </head>
 <body>
     <div class="container">
