TEAMO (arrumando escrita de uma pagina)

--- a/hojeEmDia.html
+++ b/hojeEmDia.html
@@ -51,11 +51,11 @@
                 <br><br>Agradeço todos os dias por ter conhecido você e saber que posso confiar 
                 minha vida inteira à você, saber que sempre vou ter uma pessoa que vai estar 
                 comigo independente do que esteja acontecendo, sempre vou poder conversar sobre tudo, 
-                fofocar, dar risada, chorar, abraçar, e que independente do momento me faz 
+                fofocar, dar risada, chorar, abraçar, e que independente do momento me faz me
                 sentir tão bem, realizado, feliz, leve, o homem mais feliz do mundo!
                 E ter o previlégio de ser seu namorado, foi o melhor presente que eu já pude ganhar na minha vida toda!
                 <br><br>Todos nossos momentos juntos, cada um deles, pode ter certeza que eu vou guardar pra sempre. Todas as fotos que 
-                coloquei nesse site foram de acontecimentos e dias incriveis e marcantes que já tivemos juntos e eu queria que você soubesse que cada página, cada escrita,
+                coloquei nesse site foram de acontecimentos e dias incriveis e marcantes que já tivemos juntos (e existem outras milhares que nao coloquei por que se nao ia ficar enorme kkkkkkk) e eu queria que você soubesse que cada página, cada escrita,
                 eu fiz com muito carinho e com muito amor!
                 <br><br> Muito obrigado por tudo o que você já fez por mim, por ter ficado comigo todo eses tempo, por ter me aguentado
                 e ser uma pessoa incrivel comigo! 
